--- a/catalog.html
+++ b/catalog.html
@@ -24,19 +24,20 @@
           <a class="navigation-link" href="#">О компании</a>
         </li>
       </ul>
-      <ul class="navigation-list navigation-user">
+      <ul class="navigation-list navigation-user navigation-user-catalog">
         <li class="navigation-item">
           <a class="navigation-phone" href="tel:+78005558628">+7 800 555-86-28</a>
         </li>
         <li class="navigation-item">
+          <button class="navigation-btn" type="submit"></button>
           <input class="navigation-search" type="search" name="search">
           <span class="visually-hidden">Поиск</span>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">Вход</a>
+          <a class="navigation-link navigation-login" href="#">Вход</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">2 товара</a>
+          <a class="navigation-link navigation-basket" href="#">2 товара</a>
         </li>
       </ul>
     </nav>
@@ -153,18 +154,21 @@
                 </li>
               </ul>
             </fieldset>
-            <button class="button" type="submit">Применить</button>
+            <button class="sorting-button" type="submit">Применить</button>
           </div>
         </form>
-        <ul class="product-list">
+        <ul class="product-list product-list-catalog">
           <li class="product-item">
             <a class="product-item-link" href="#">
               <img class="product-image" src="img/ice-cream-raspberry.png" alt="Малина" width="168" height="168">
               <h5 class="product-item-title">Малинка</h5>
               <p class="product-item-description">Сливочное мороженое с малиновым джемом</p>
             </a>
-            <b class="product-item-price">310 ₽/кг</b>
-            <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+            <div class="price-wrapper">
+              <b class="product-item-price">310 ₽/кг</b>
+              <a class="btn-basket" href="#"></a>
+              <span class="visually-hidden">Добавить в корзину</span>
+            </div>
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
@@ -172,8 +176,11 @@
               <h5 class="product-item-title">Фисташка</h5>
               <p class="product-item-description">Фисташковый пломбир с кусочками шоколада</p>
             </a>
-            <b class="product-item-price">340 ₽/кг</b>
-            <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+            <div class="price-wrapper">
+              <b class="product-item-price">340 ₽/кг</b>
+              <a class="btn-basket" href="#"></a>
+              <span class="visually-hidden">Добавить в корзину</span>
+            </div>
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
@@ -181,8 +188,11 @@
               <h5 class="product-item-title">Черника</h5>
               <p class="product-item-description">Крем-брюле с черничным джемом</p>
             </a>
-            <b class="product-item-price">330 ₽/кг</b>
-            <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+            <div class="price-wrapper">
+              <b class="product-item-price">330 ₽/кг</b>
+              <a class="btn-basket" href="#"></a>
+              <span class="visually-hidden">Добавить в корзину</span>
+            </div>
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
@@ -190,8 +200,11 @@
               <h5 class="product-item-title">Бабл-гам</h5>
               <p class="product-item-description">Ванильный пломбир со сладкой посыпкой</p>
             </a>
-            <b class="product-item-price">320 ₽/кг</b>
-            <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+            <div class="price-wrapper">
+              <b class="product-item-price">320 ₽/кг</b>
+              <a class="btn-basket" href="#"></a>
+              <span class="visually-hidden">Добавить в корзину</span>
+            </div>
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
@@ -199,8 +212,11 @@
               <h5 class="product-item-title">Ежевика</h5>
               <p class="product-item-description">Сливочное мороженое с ежевичным джемом</p>
             </a>
-            <b class="product-item-price">330 ₽/кг</b>
-            <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+            <div class="price-wrapper">
+              <b class="product-item-price">330 ₽/кг</b>
+              <a class="btn-basket" href="#"></a>
+              <span class="visually-hidden">Добавить в корзину</span>
+            </div>
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
@@ -208,8 +224,11 @@
               <h5 class="product-item-title">Банан</h5>
               <p class="product-item-description">Сливочный пломбир с банановым вкусом</p>
             </a>
-            <b class="product-item-price">340 ₽/кг</b>
-            <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+            <div class="price-wrapper">
+              <b class="product-item-price">340 ₽/кг</b>
+              <a class="btn-basket" href="#"></a>
+              <span class="visually-hidden">Добавить в корзину</span>
+            </div>
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
@@ -217,8 +236,11 @@
               <h5 class="product-item-title">Шоколадка</h5>
               <p class="product-item-description">Классический шоколадный пломбир</p>
             </a>
-            <b class="product-item-price">270 ₽/кг</b>
-            <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+            <div class="price-wrapper">
+              <b class="product-item-price">270 ₽/кг</b>
+              <a class="btn-basket" href="#"></a>
+              <span class="visually-hidden">Добавить в корзину</span>
+            </div>
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
@@ -226,8 +248,11 @@
               <h5 class="product-item-title">Клубничка</h5>
               <p class="product-item-description">Сливочный пломбир с клубничным вкусом</p>
             </a>
-            <b class="product-item-price">300 ₽/кг</b>
-            <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+            <div class="price-wrapper">
+              <b class="product-item-price">300 ₽/кг</b>
+              <a class="btn-basket" href="#"></a>
+              <span class="visually-hidden">Добавить в корзину</span>
+            </div>
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
@@ -235,8 +260,11 @@
               <h5 class="product-item-title">Лимон</h5>
               <p class="product-item-description">Освежающий лимонный сорбет</p>
             </a>
-            <b class="product-item-price">310 ₽/кг</b>
-            <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+            <div class="price-wrapper">
+              <b class="product-item-price">310 ₽/кг</b>
+              <a class="btn-basket" href="#"></a>
+              <span class="visually-hidden">Добавить в корзину</span>
+            </div>
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
@@ -244,8 +272,11 @@
               <h5 class="product-item-title">Ментол</h5>
               <p class="product-item-description">Сливочный пломбир с ментоловым сиропом</p>
             </a>
-            <b class="product-item-price">320 ₽/кг</b>
-            <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+            <div class="price-wrapper">
+              <b class="product-item-price">320 ₽/кг</b>
+              <a class="btn-basket" href="#"></a>
+              <span class="visually-hidden">Добавить в корзину</span>
+            </div>
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
@@ -253,8 +284,11 @@
               <h5 class="product-item-title">Орешек</h5>
               <p class="product-item-description">Фисташковый пломбир с шоколадным сиропом</p>
             </a>
-            <b class="product-item-price">360 ₽/кг</b>
-            <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+            <div class="price-wrapper">
+              <b class="product-item-price">360 ₽/кг</b>
+              <a class="btn-basket" href="#"></a>
+              <span class="visually-hidden">Добавить в корзину</span>
+            </div>
           </li>
           <li class="product-item">
             <a class="product-item-link" href="#">
@@ -262,12 +296,15 @@
               <h5 class="product-item-title">Крем-брюле</h5>
               <p class="product-item-description">Классическое крем-брюле </p>
             </a>
-            <b class="product-item-price">280 ₽/кг</b>
-            <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+            <div class="price-wrapper">
+              <b class="product-item-price">280 ₽/кг</b>
+              <a class="btn-basket" href="#"></a>
+              <span class="visually-hidden">Добавить в корзину</span>
+            </div>
           </li>
         </ul>
         <div class="pagination-wrapper">
-          <button class="button pagination-show-more" type="button">Показать еще</button>
+          <button class="pagination-show-more" type="button">Показать еще</button>
           <ul class="pagination">
             <li class="pagination-item">
               <a class="pagination-link pagination-prev pagination-disabled">
@@ -299,7 +336,7 @@
       </section>
     </div>
   </main>
-  <footer class="page-footer">
+  <footer class="page-footer page-footer-catalog">
     <div class="page-footer-wrapper">
       <section class="footer-social">
         <ul class="footer-social-list">
