--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
             <a class="navigation-phone" href="tel:+78005558628">+7 800 555-86-28</a>
           </li>
           <li class="navigation-item">
+            <button class="navigation-btn" type="submit"></button>
             <input class="navigation-search" type="search" name="search">
             <span class="visually-hidden">Поиск</span>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Вход</a>
+            <a class="navigation-link navigation-login" href="#">Вход</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Пусто</a>
+            <a class="navigation-link navigation-basket" href="#">Пусто</a>
           </li>
         </ul>
       </nav>
@@ -45,7 +46,7 @@
         <div class="slider-wrapper">
           <div class="slider-content-wrapper">
             <div class="slider-content slider-content-current">
-              <h2 class="slider-content-title">Нежный пломбир с клубничным джемом</h2>
+              <h2 class="slider-content-title">Нежный пломбир <br>с клубничным джемом</h2>
               <p class="slider-content-description">Натуральное мороженое из свежих сливок и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
               <button class="btn btn-white" type="button">Заказать</button>
             </div>
@@ -140,16 +141,24 @@
           <h3 class="offers-title">Заказывайте мороженое и получайте подарки!</h3>
           <div class="offers-wrapper">
             <div class="offers-raspberry">
-              <h4 class="offers-raspberry-title">Малинка даром!</h4>
-              <p class="offers-raspberry-description">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-              <button class="btn btn-white" type="button">Хочу подарок</button>
-              <img class="offers-raspberry-image" src="/img/basket-raspberries.png" alt="Корзинка с малиной">
+              <div class="offers-raspberry-wrapper">
+                <h4 class="offers-raspberry-title">Малинка даром!</h4>
+                <p class="offers-raspberry-description">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+                <button class="btn btn-white" type="button">Хочу подарок</button>
+              </div>
+              <div class="offers-raspberry-wrapper">
+                <img class="offers-raspberry-image" src="/img/basket-raspberries.png" alt="Корзинка с малиной" width="181" height="240">
+              </div>
             </div>
             <div class="offers-marshmallow">
-              <h4 class="offers-marshmallow-title">Маршмеллоу даром!</h4>
-              <p class="offers-marshmallow-description">При покупке 2 кг пломбира, добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
-              <button class="btn btn-white" type="button">Хочу подарок</button>
-              <img class="offers-marshmallow-image" src="/img/basket-marshmallows.png" alt="Корзинка с маршмеллоу">
+              <div class="offers-marshmallow-wrapper">
+                <h4 class="offers-marshmallow-title">Маршмеллоу даром!</h4>
+                <p class="offers-marshmallow-description">При покупке 2 кг пломбира, добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
+                <button class="btn btn-white" type="button">Хочу подарок</button>
+              </div>
+              <div class="offers-marshmallow-wrapper">
+                <img class="offers-marshmallow-image" src="/img/basket-marshmallows.png" alt="Корзинка с маршмеллоу" width="232" height="249">
+              </div>
             </div>
           </div>
         </section>
@@ -162,8 +171,11 @@
                 <h5 class="product-item-title">Малинка</h5>
                 <p class="product-item-description">Сливочное мороженое с малиновым джемом</p>
               </a>
-              <b class="product-item-price">310 ₽/кг</b>
-              <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+              <div class="price-wrapper">
+                <b class="product-item-price">310 ₽/кг</b>
+                <a class="btn-basket" href="#"></a>
+                <span class="visually-hidden">Добавить в корзину</span>
+              </div>
             </li>
             <li class="product-item">
               <a class="product-item-link" href="#">
@@ -171,8 +183,11 @@
                 <h5 class="product-item-title">Фисташка</h5>
                 <p class="product-item-description">Фисташковый пломбир с кусочками шоколада</p>
               </a>
-              <b class="product-item-price">340 ₽/кг</b>
-              <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+              <div class="price-wrapper">
+                <b class="product-item-price">340 ₽/кг</b>
+                <a class="btn-basket" href="#"></a>
+                <span class="visually-hidden">Добавить в корзину</span>
+              </div>
             </li>
             <li class="product-item">
               <a class="product-item-link" href="#">
@@ -180,8 +195,11 @@
                 <h5 class="product-item-title">Черника</h5>
                 <p class="product-item-description">Крем-брюле с черничным джемом</p>
               </a>
-              <b class="product-item-price">330 ₽/кг</b>
-              <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+              <div class="price-wrapper">
+                <b class="product-item-price">330 ₽/кг</b>
+                <a class="btn-basket" href="#"></a>
+                <span class="visually-hidden">Добавить в корзину</span>
+              </div>
             </li>
             <li class="product-item">
               <a class="product-item-link" href="#">
@@ -189,41 +207,48 @@
                 <h5 class="product-item-title">Бабл-гам</h5>
                 <p class="product-item-description">Ванильный пломбир со сладкой посыпкой</p>
               </a>
-              <b class="product-item-price">320 ₽/кг</b>
-              <a class="btn-basket visually-hidden" href="#">Добавить в корзину</a>
+              <div class="price-wrapper">
+                <b class="product-item-price">320 ₽/кг</b>
+                <a class="btn-basket" href="#"></a>
+                <span class="visually-hidden">Добавить в корзину</span>
+              </div>
             </li>
           </ul>
         </section>
         <section class="advantages">
-          <h2 class="visually-hidden">Преимущества</h2>
-          <h3 class="advantages-title">Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
-         <ul class="advantages-list">
-          <li class="advantages-item">
-            <p class="advantages-description">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-          </li>
-          <li class="advantages-item">
-            <p class="advantages-description">Закупка ингредиентов производится только у проверенных фермерских хозяйств, с которыми нас связывает долговременное сотрудничество.</p>
-          </li>
-          <li class="advantages-item">
-            <p class="advantages-description">Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты и добавки произведены из натурального сырья.</p>
-          </li>
-          <li class="advantages-item">
-            <p class="advantages-description">Доставка нашего мороженого осуществляется в специальном термопаке, который не дает мороженому растаять и позволяет сохранить превосходный вкус.</p>
-          </li>
-        </ul>
+          <div class="advantages-wrapper">
+            <h2 class="visually-hidden">Преимущества</h2>
+            <h3 class="advantages-title">Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
+            <ul class="advantages-list">
+              <li class="advantages-item">
+                <p class="advantages-description">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+              </li>
+              <li class="advantages-item">
+                <p class="advantages-description">Закупка ингредиентов производится только<br> у проверенных фермерских хозяйств, с которыми<br> нас связывает долговременное сотрудничество.</p>
+              </li>
+              <li class="advantages-item">
+                <p class="advantages-description">Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты<br> и добавки произведены из натурального сырья.</p>
+              </li>
+              <li class="advantages-item">
+                <p class="advantages-description">Доставка нашего мороженого осуществляется в специальном термопаке, который не дает мороженому растаять и позволяет сохранить превосходный вкус.</p>
+              </li>
+            </ul>
+          </div>
         </section>
         <div class="blog-subscribe-wrapper">
           <article class="blog">
-            <span class="blog-title">Новое в нашем блоге</span>
-            <a class="blog-link" href="#">10 способов сервировки фруктовых щербетов к столу</a>
+            <p class="blog-title">Новое в нашем блоге</p>
+            <a class="blog-link" href="#">10 способов сервировки фруктовых щербетов<br> к столу</a>
           </article>
           <section class="subscribe">
-            <p class="subscribe-text">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-            <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="POST">
-              <label class="visually-hidden" for="subscribe-email">Email</label>
-              <input class="subscribe-form-field" type="email" id="subscribe-email" name="subscribe-email" placeholder="email@example.com" required>
-              <button class="btn btn-red" type="button">Отправить</button>
-            </form>
+            <div class="subscribe-wrapper">
+              <p class="subscribe-text">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+              <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="POST">
+                <label class="visually-hidden" for="subscribe-email">Email</label>
+                <input class="subscribe-form-field" type="email" id="subscribe-email" name="subscribe-email" placeholder="email@example.com" required>
+                <button class="btn btn-red" type="button">Отправить</button>
+              </form>
+            </div>
           </section>
         </div>
         <section class="delivery">
@@ -231,38 +256,38 @@
             <h3 class="delivery-title">Доставка любимого мороженого на дом</h3>
             <p class="delivery-description">Хочется полакомиться любимым дессертом, но нет времени съездить в магазин? Закажите доставку мороженого на дом и курьер привезет вам ваш заказ в течение часа!</p>
           </div>
-          <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="post">
-            <p class="delivery-form-title">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</p>
-            <div class="delivery-form-date">
-              <span class="form-label">
-                <label for="delivery-date">Дата</label>
-                <button class="info" type="button">
-                  <span class="visually-hidden">Посмотреть дополнительную информацию</span>
-                </button>
-              </span>
-              <input type="text"id="delivery-date" name="delivery-date" placeholder="01.04.2020">
-            </div>
-            <div class="delivery-form-phone">
-              <span class="form-label">
+          <div class="delivery-form-wrapper">
+            <p class="delivery-form-title">Укажите адрес и дату доставки, и мы свяжемся<br> с вами, чтобы подтвердить заказ.</p>
+            <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="post">
+              <p class="field-group delivery-form-date">
+                <label for="delivery-date">
+                  Дата
+                  <button class="info" type="button">
+                    <span class="visually-hidden">Посмотреть дополнительную информацию</span>
+                  </button>
+                </label>
+                <input type="text" id="delivery-date" name="delivery-date" placeholder="01.04.2020">
+              </p>
+              <p class="field-group delivery-form-phone">
                 <label for="delivery-phone">Телефон</label>
                 <input type="text" id="delivery-phone" name="delivery-phone" placeholder="+7 800 999-00-00">
-              </span>
-            </div>
-            <div class="delivery-form-adress">
-              <span class="form-label">
-                <label for="delivery-address">Адрес</label>
-                <button class="info" type="button">
-                  <span class="visually-hidden">Посмотреть дополнительную информацию</span>
-                </button>
-              </span>
-              <input type="text"id="delivery-address" name="delivery-address" placeholder="ул. Большая Конюшенная, 19/8">
-            </div>
-            <button class="btn btn-red" type="button">Отправить</button>
-          </form>
+              </p>
+              <p class="field-group delivery-form-address">
+                <label for="delivery-address">
+                  Адрес
+                  <button class="info" type="button">
+                    <span class="visually-hidden">Посмотреть дополнительную информацию</span>
+                  </button>
+                </label>
+                <input type="text"id="delivery-address" name="delivery-address" placeholder="ул. Большая Конюшенная, 19/8">
+              </p>
+              <button class="btn-red btn-delivery" type="button">Отправить</button>
+            </form>
+          </div>
         </section>
         <section class="contacts">
           <div class="contacts-wrapper">
-            <p class="contacts-text">Адрес главного офиса и офлайн-магазина:</p>
+            <p class="contacts-text">Адрес главного офиса<br> и офлайн-магазина:</p>
             <address class="contacts-address">наб. Реки Карповки, <br>5 лит П, Санкт-Петербург</address>
             <p class="contacts-text">Для заказов по телефону:</p>
             <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
@@ -310,7 +335,7 @@
           </ul>
         </section>
         <section class="footer-copyright">
-          <img src="img/logo-htmlacademy.svg" alt="Логотип htmlacademy" width="93" height="27">
+          <img class="footer-logo-htmlacademy" src="img/logo-htmlacademy.svg" alt="Логотип htmlacademy" width="93" height="27">
           <p class="footer-copyright-text">Сделано в <a class="footer-copyright-link">.html academy</a> © 2021</p>
         </section>
       </div>
